<resources>
    <string name="app_name">Green Messenger</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="login_here">-- Login Here --</string>
    <string name="green_university_bangladesh">Green University Bangladesh</string>
    <string name="submit">Submit</string>
    <string name="forget_password">Forget Password</string>
    <string name="this_app_developed_by_green_university">this app developed by green university</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_here">-- Register Here --</string>
    <string name="todo">TODO</string>
    <string name="user_list">User List</string>
    <string name="profile">Profile</string>
    <string name="team_page">Team Page</string>
    <string name="textview">TextView</string>
    <string name="message_with_me">Message With Me</string>
    <string name="image">Image</string>
    <string name="todo">TODO</string>
    <string name="android_charting_application_xml_ui_design_android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_android_charting_application_xml_ui_design">Android charting application xml ui design. Android charting application xml ui design tutorial with example. Android charting application xml ui design. Android charting application xml ui design.</string>
    <string name="android_charting_application_xml_ui_design_android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_android_charting_application_xml_ui_design">Android charting application xml ui design. Android charting application xml ui design tutorial with example. Android charting application xml ui design. Android charting application xml ui design.</string>
    <string name="android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_tutorial_with_example_android_charting_application_xml_ui_design_tutorial_with_example">Android charting application xml ui design tutorial with example. Android charting application xml ui design tutorial with example. Android charting application xml ui design tutorial with example. Android charting application xml ui design tutorial with example.</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
</resources>