<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:text="@string/green_university_bangladesh"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appTitle"
        android:columnCount="2"
        android:paddingTop="100dp">

        <TextView
            android:id="@+id/LoginPage"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="#009688"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/RegisterPage"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="#673AB7"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/UserPage"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="#673AB7"
            android:gravity="center"
            android:text="@string/user_list"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ProfilePage"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="#009688"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TeamPage"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="#009688"
            android:gravity="center"
            android:text="@string/team_page"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


    </GridLayout>


    <TextView
        android:id="@+id/copyRightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp"
        android:text="@string/this_app_developed_by_green_university"
        android:textColor="@color/white"
        android:textSize="20sp" />
</RelativeLayout>