<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0250F9"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:text="@string/green_university_bangladesh"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appTitle"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/register_here"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginLabel"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_supervised_user_circle_24"
        android:drawablePadding="20dp"
        android:hint="Enter Name"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="#ddd" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userName"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="20dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="#ddd" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userEmail"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="#ddd" />

    <LinearLayout
        android:id="@+id/userLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userPassword"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/ic_baseline_login_24"
            android:drawablePadding="25dp"
            android:text="@string/register"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/copyRightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp"
        android:text="@string/this_app_developed_by_green_university"
        android:textColor="@color/white"
        android:textSize="20sp" />
</RelativeLayout>